# pdfdrill

./: .env.example  .gitignore  1802.08153.lines.json  2305.04710v1.lines.json  2305.04710v1.tgz  2601.07372.lines.json  AGENTS.md  CLAUDE.md  COCALC.md  LICENSE  QUICKSTART.md  README.md  bootstrap.sh  cocalc-setup.sh  pdfdrill  pyproject.toml  requirements.txt  resume.sh  subq-1-1-small-model-card.lines.json  subq-1-1-small-model-card.md
.claude/skills/docset-publish/: SKILL.md
.claude/skills/pdfdrill/: SKILL.md  commands.yaml
.github/: FUNDING.yml
.github/workflows/: skill-sync.yml
data/: joint.semantic.json
docs/: CLAUDE_AI_USAGE.md  CR-branding-variable.md  CR-compare-katex-defer.md  CR-llm-scan-triage.md  CR-versioning-changelog.md  DATA-STRUCTURES-2026-06-09.md  PROMPT_FOR_CLAUDE_AI.md
docs/layers/: L0-container.md  L1-raster.md  L2-glyph.md  L3-text-lines.md  L4-layout-regions.md  L5-docobjects.md  L6-expression-syntax.md  L7-semantic-graph.md  L8-ontology.md  README.md  TOWER.md
docs/prompts/: 2026-07-15-ocr-integration-prompt.md
docs/scandrill/: PROMPT-FOR-PDFDRILL.md  PROPOSAL-ADF.md  PROPOSAL-ASSEMBLY.md  PROPOSAL.md  README.md  SCANDRILL-CLAUDE.md  TOPOLOGY-VS-RASTER.md
docs/superpowers/plans/: 2026-07-12-github-repo-document-set.md  2026-07-14-capability-planner.md
docs/superpowers/specs/: 2026-06-10-span-aware-tables-design.md  2026-06-26-modularity-audit-vs-latw.md  2026-06-30-local-image-server-dzi.md  2026-07-07-context-projection-design.md  2026-07-07-dual-route-reconciliation-plan.md  2026-07-08-okf-projection-plan.md  2026-07-12-github-repo-document-set-design.md  2026-07-14-preflight-attestation-gate.md  2026-07-14-self-contained-doc-folders.md
examples/: README.md  arxiv.md  book.md  equations.md  invoice.md  projections.md  slides.md
src/: config.json
src/docmodel/: __init__.py  base_module.py  core.py  loader.py  main.py  mathpix.py  text_utils.py
src/docmodel/modules/: __init__.py  _captions.py  abstract.py  citation.py  dehyphenation.py  diagram.py  document_flow.py  document_structure.py  equation.py  footnote.py  formula.py  header.py  list_items.py  page.py  paragraph.py  picture.py  sidenote.py  table.py  toc.py
src/docops/: __init__.py  base.py  default_config.json  loader.py  main.py  nlp_config.json  nlp_stanza.py  transclusion_render.py
src/docops/mutators/: __init__.py  dehyphenate.py  promote_cleaned.py  stanza_nlp.py
src/docops/projectors/: __init__.py  beamer.py  common.py  comparison_html.py  compressed_tiddlers.py  distill_reader.py  formula_report.py  latex.py  latex_pipeline.py  llm_compact.py  llm_text.py  okf.py  plaintext.py  scikgtex.py  tiddlywiki.py
src/features/: __init__.py  __main__.py  audit_deps.py  audit_nested.py  extract_address.py  extract_bic.py  extract_dates.py  extract_doi.py  extract_email.py  extract_german_address.py  extract_iban.py  extract_ids.py  extract_isbn.py  extract_language.py  extract_names.py  extract_phone.py  extract_price.py  extract_url.py  feature_registry.py  features.py  graph_builder.py  match_entities.py  relations.py
src/mathlayer/: __init__.py  annotate.py  backends.py  canonical.py  operators.py  parse.py
src/passes/: __init__.py  base.py  builtin.py  genre.py  measurement.py  quantity.py
src/pdfdrill/: __init__.py  __main__.py  _help_generated.txt  annotations.py  bibliography.py  blocks.py  booktoc.py  capability_planner.py  capgraph.py  chars_to_lines.py  citedrill.py  classify.py  cli.py  commands.py  compare_math.py  conclusion.py  config.py  context.py  continuity.py  continuity_scorer.py  deepl_client.py  docgraph.py  docinspect.py  docos.py  docpack.py  download_registry.py  engine.py  env.py  eqcrop.py  eqnums.py  extract_addresses.py  font_categories.json  font_classify.py  font_image_layers.py  gemma_client.py  geometry.py  heading_cleanup.py  identifiers.py  image_model.py  latex_map.py  (+49 more)
src/pdfdrill/nodes/: emphasis_detector.py  flagger.py  ingest_pdfplumber.py  lines_paragraphs.py  math_assembler.py  math_detector.py  poppler.py  stub_nlp.py  (+2 more)
src/semantic/: __init__.py  aggregate.py  attribution.py  belief.py  blocks.py  build.py  bundles.py  calibration.py  claims.py  compiler.py  concepts.py  entity.py  evidence.py  fixpoint.py  fracidx.py  gaps.py  genre.py  geometry_columns.py  graph.py  identity.py  kitems.py  measurements.py  physical.py  proof.py  quantities.py  question.py  registry.py  relation.py  render.py  rulebook.py  spaces.py  stex.py  transformation.py  units.py  verify.py
src/vocabnet/: __init__.py  dlmf.py  federate.py  germanet.py  gnd.py  msc_html.py  ontomathpro.py  skos.py  sources.py  vocab.py
tests/: test_aggregate.py  test_annotations.py  test_arxiv_routes.py  test_ask.py  test_atomic_save.py  test_basic.py  test_beamer_projector.py  test_belief.py  test_bibfetch_delegate.py  test_bibliography.py  test_bibsource.py  test_bibtex.py  test_bibtex_arxiv.py  test_blocks.py  test_booktoc.py  test_born_digital_model.py  test_bundles.py  test_calibration.py  test_candidates.py  test_capability_planner.py  test_capgraph.py  test_chars_json_location.py  test_chars_json_robust.py  test_chars_to_lines.py  test_chat.py  test_citation_math_guard.py  test_citedrill.py  test_claims_rulebook.py  test_classify.py  test_cli_batch.py  test_cli_spaced_filename.py  test_cmd_quantities.py  test_codelisting_bibkey.py  test_combine.py  test_compare.py  test_concepts.py  test_conclusion.py  test_config.py  test_context.py  test_continuity.py  (+153 more)
tests/scandrill/: __init__.py  conftest.py  test_adf.py  test_adf_assemble.py  test_config.py  test_handoff.py  test_meta_ocr.py  test_roundtrip.py  test_server.py  test_upload.py
tools/: DRILLUI.md  MCP.md  build_font_categories.py  claude_capability_test.sh  drillbatch.py  drillui_bridge.ts  drillui_chat.py  drillui_term.html  pdfdrill_mcp.py  pdfdrill_mcp_http.py  route_matrix.py  skillsync.py  test_drillui_bridge.ts  test_drillui_urls.ts  tiddlers_to_md.py
tools/imageserver/: README.md  build_pyramids.py  install.sh  mathpix_server.py  offline_viewer.py  viewer.html
vocab/: README.md
(+44 files in other folders)
