[build-system]
requires = ["setuptools>=77"]
build-backend = "setuptools.build_meta"

[project]
name = "pdfdrill"
version = "0.1.0"
description = "Token-economical drill-down extraction + PDF->LaTeX OCR quality control"
readme = "README.md"
license = "MIT"
license-files = ["LICENSE"]
requires-python = ">=3.10"
dependencies = [
    "pdfplumber>=0.11",
    "pydantic>=2.0",
    "pypdf>=4.0",
]

[project.optional-dependencies]
pix2tex = ["pillow>=10.0", "pix2tex>=0.1.2"]
nlp = ["stanza>=1.10"]
# Additive commercial-document feature extractors (the `features` package).
# networkx + rapidfuzz are the core; the rest back individual extractors and
# are imported lazily (each extractor degrades to [] when its lib is absent).
features = [
    "networkx>=3.0",
    "rapidfuzz>=3.0",
    "dateparser>=1.2",
    "phonenumbers>=8.13",
    "price-parser>=0.3.4",
    "probablepeople>=0.5.5",
    "usaddress>=0.5.10",
    "email-validator>=2.0",
]
# Layout-element GNN (the vendored `pdfdrill.tsv_gcn`): a pure-NumPy
# geometric-attention model over tesseract word boxes that isolates addresses /
# BOM line items as content-addressed tiddlers (`pdfdrill elements`). numpy is
# required for the GNN; blake3 is optional (content_hash falls back to sha256).
# The vendored `pdfdrill.extract_addresses` heuristic (no-model address path) is
# pure-stdlib — no extra needed. libpostal/pypostal (`postal`) is an OPTIONAL
# upgrade that PARSES a found address block into components; it's wired as an
# enrichment step (auto-used when present; the .so is ctypes-preloaded from
# /usr/local/lib so it works without ldconfig/root). Install: build libpostal
# from source, then `pip install postal`. Not declared here (the C-lib build is
# not pip-installable); pdfdrill degrades silently to the raw block when absent.
layout = [
    "numpy>=1.24",
    "blake3>=0.4",
]
# QR / barcode scanning (`pdfdrill qr`): GiroCode/EPC payment QR + Data Matrix
# franking marks as confirmation data. zxing-cpp is the decode engine; pages are
# rasterized with the existing pdftoppm (no PyMuPDF needed). Degrades cleanly.
qr = [
    "zxing-cpp>=2.0",
]
# Language detection accuracy upgrade (features.extract_language). Without it the
# pure-Python stopword fallback (or langdetect, if present) is used — detection
# always works offline. lingua is best on short/mixed text.
lang = [
    "lingua-language-detector>=2.0",
    "langdetect>=1.0",
]

[project.scripts]
pdfdrill = "pdfdrill.cli:main"

[tool.setuptools.packages.find]
where = ["src"]
include = ["pdfdrill*", "docmodel*", "docops*", "features*", "semantic*"]
